<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.opensource.boyd.talitome.MainActivity">

    <TextView
        android:id="@+id/title_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_1"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" />
    <TextView
        android:id="@+id/title_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_3"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/title_text1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@+id/title_text3"
        android:layout_marginStart="8dp" />
    <TextView
        android:id="@+id/title_text3"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:text="@string/title_2"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title_text1"
        app:layout_constraintEnd_toStartOf="@+id/title_text2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/heroes_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/selected_hero_text"
        app:layout_constraintTop_toBottomOf="@+id/title_text3">

    </android.support.v7.widget.RecyclerView>


    <TextView
        android:id="@+id/selected_hero_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/heroes_recycler"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
