<?xml version="1.0" encoding="utf-8"?>
    <layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.opensource.boyd.talitome.viewmodels.HeroTrackerViewModel" />
    </data>



    <android.support.constraint.ConstraintLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="120dp"
        android:layout_height="175dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:transitionName="hero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/char_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test"
            android:layout_gravity="center"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/char_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.character.name}"
        android:fontFamily="@font/font_windlass"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/char_align_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alignment_label"
        android:fontFamily="@font/font_windlass"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.114" />

    <TextView
        android:id="@+id/char_align"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.character.alignment}"
        android:fontFamily="@font/font_windlass"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/char_align_label"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.288" />

    <LinearLayout
        android:id="@+id/char_str_layout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="parent"
        >

    <TextView
        android:id="@+id/char_str_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_label"
        android:textSize="18sp" />


        <ImageButton
            android:id="@+id/str_decrease_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_downward_black_24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            />

    <TextView
        android:id="@+id/char_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1"
        android:text="@{String.valueOf(viewModel.character.strength)}"
        android:fontFamily="@font/font_windlass"
        android:textSize="22sp"
        android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/str_increase_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_upward_black_24dp"
            android:onClick="@{viewModel.onClickStrUpBtn}"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/char_craft_layout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/char_str_layout"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/char_craft_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_label"
            android:textSize="18sp" />


        <ImageButton
            android:id="@+id/craft_decrease_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_downward_black_24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            />

        <TextView
            android:id="@+id/char_craft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            android:text="@{String.valueOf(viewModel.character.craft)}"
            android:fontFamily="@font/font_windlass"
            android:textSize="22sp"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/craft_increase_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_upward_black_24dp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/char_life_layout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/char_craft_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/char_skills_label">

        <TextView
            android:id="@+id/char_life_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life_label"
            android:textSize="18sp" />


        <ImageButton
            android:id="@+id/life_decrease_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_downward_black_24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            />

        <TextView
            android:id="@+id/char_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            android:text="@{String.valueOf(viewModel.character.life)}"
            android:fontFamily="@font/font_windlass"
            android:textSize="22sp"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/life_increase_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_upward_black_24dp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/char_fate_layout"
        android:layout_height="30dp"
        android:layout_width="wrap_content"
        android:layout_marginStart="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/char_str_layout"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/char_str_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/card_view">

        <TextView
            android:id="@+id/char_fate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fate_label"
            android:textSize="18sp" />


        <ImageButton
            android:id="@+id/fate_decrease_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_downward_black_24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            />

        <TextView
            android:id="@+id/char_fate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            android:text="@{String.valueOf(viewModel.character.fate)}"
            android:fontFamily="@font/font_windlass"
            android:textSize="22sp"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/fate_increase_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_upward_black_24dp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/char_gold_layout"
        android:layout_height="30dp"
        android:layout_width="wrap_content"
        android:layout_marginStart="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/char_craft_layout"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/char_craft_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/char_fate_layout">

        <TextView
            android:id="@+id/char_gold_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gold_label"
            android:textSize="18sp" />


        <ImageButton
            android:id="@+id/gold_decrease_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_downward_black_24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            />

        <TextView
            android:id="@+id/char_gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            android:text="@{String.valueOf(viewModel.character.gold)}"
            android:fontFamily="@font/font_windlass"
            android:textSize="22sp"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/gold_increase_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_upward_black_24dp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/char_skills_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills_label"
        android:fontFamily="@font/font_windlass"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:layout_marginTop="312dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent" />



    <android.support.v7.widget.RecyclerView
        android:id="@+id/hero_skills_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/char_skills_label">

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>
</layout>